@@ -1,5 +1,4 @@
-[CFR - another java decompiler](http://www.benf.org/other/cfr/)
-[代码优化](http://kb.cnblogs.com/page/510538/)
+
 
 # 线上环境
 
@@ -101,10 +100,14 @@ jps -mlv
 ```
 
 
-##jmap
+## jmap
 打印出某个java进程（使用pid）内存内的所有'对象'的情况（如：产生那些对象，及其数量）。
 
 ```bash
+jmap -heap      xxxPid  # 打印 使用的垃圾回收器，heap 的配置和使用状况
+jmap -histo     xxxPid  # 打印 各个类实例对象使用内存的柱状图（histogram）
+
+# dump出内存
 jmap -dump:format=b,file=outfile.jmap.hprof 3024
 ```
 如果报以下错误，请确认启用jmap的用户是否和目标java进程是同一个用户，否则追加参数 -F 尝试。
@@ -135,22 +138,47 @@ java -Djavax.net.ssl.trustStore=/path/to/your.keystore\
 ```
 
 
-# 内存管理
-[Memory Management in the Java HotSpotTM Virtual Machine](http://www.oracle.com/technetwork/java/javase/memorymanagement-whitepaper-150215.pdf)
+# 参考
 
+- [Java HotSpot Garbage Collection](http://www.oracle.com/technetwork/java/javase/tech/index-jsp-140228.html)
+    - [Memory Management in the Java HotSpotTM Virtual Machine](http://www.oracle.com/technetwork/java/javase/tech/memorymanagement-whitepaper-1-150020.pdf)
+    - [Garbage Collection Tuning](http://www.oracle.com/technetwork/java/javase/gc-tuning-6-140523.html)
+- [jdk 9](https://docs.oracle.com/javase/9/index.html)
+- [jdk 1.7 - java](http://docs.oracle.com/javase/7/docs/technotes/tools/windows/java.html)
+- [Getting Started with the G1 Garbage Collector](http://www.oracle.com/webfolder/technetwork/tutorials/obe/java/G1GettingStarted/index.html)
+- [JVM Options](http://www.oracle.com/technetwork/java/javase/tech/vmoptions-jsp-140102.html)
+- [gc tuning](http://www.oracle.com/technetwork/java/gc-tuning-5-138395.html)
+- [Garbage First](http://www.oracle.com/technetwork/java/javase/tech/g1-intro-jsp-135488.html)
+- [CFR - another java decompiler](http://www.benf.org/other/cfr/)
+- [presenting the permanent generation](https://blogs.oracle.com/jonthecollector/entry/presenting_the_permanent_generation)
+- [代码优化](http://kb.cnblogs.com/page/510538/)
 
+```text
+┏━┳━┓
+┃  ┃  ┃
+┣━╋━┫
+┃  ┃  ┃
+┗━┻━┛
+┌┬┐
+├┼┤
+└┴┘ 
 
-[java JVM 内存类型](http://javapapers.com/core-java/java-jvm-memory-types/)
+┏━━━━━━━━━━┓
+┃  Eden              ┃
+┣━━━━━┳━━━━┫ Young Generation
+┃  From    ┃ To     ┃
+┣━━━━━┻━━━━┫------------------
+┃  Old               ┃ Old   Generation 
+┗━━━━━━━━━━┛
 
-[presenting the permanent generation](https://blogs.oracle.com/jonthecollector/entry/presenting_the_permanent_generation)
-
-[JVM Options](http://www.oracle.com/technetwork/java/javase/tech/vmoptions-jsp-140102.html)
-
-[gc tuning](http://www.oracle.com/technetwork/java/gc-tuning-5-138395.html)
-
-[Garbage First](http://www.oracle.com/technetwork/java/javase/tech/g1-intro-jsp-135488.html)
-
-[jdk 1.7 - java](http://docs.oracle.com/javase/7/docs/technotes/tools/windows/java.html)
+- Young Generation 满了？From 中已经有数据了。触发 young generation collection /minor collection
+    - From 中要保留的对象足够老？
+      Yes - copy 到 Old 中
+      No  - copy 到 To  中，To 不能能放的下？直接放到 Old 中。
+    - Young 中的要保留的对象 copy 到 To 中。对象太大，放不下？否则直接放到 Old 中
+    - 如果 copy 到 To 时，To已经满了，则 Eden 和 From 剩余所有存活对象都要 copy 到 Old 中。
+- Old 也满了？则触发  full collection/major collection。执行 mark-sweep-compact
+```
 
 
 ## 内存分类
@@ -162,14 +190,148 @@ java -Djavax.net.ssl.trustStore=/path/to/your.keystore\
         * 运行时常量池（Runtime Constant Pool），每个class、interface都有。
     * ？？？ Stack : 对线程私有，以栈的方式存储立即数，对象的地址，返回值，异常。
     * other
+
+## 垃圾回收机制
+
+### 垃圾回收器的性能指标
+
+
+### 分类
+
+- Serial Collector 
+ 
+   单线程执行，stop-the-world, 对 Old generation，执行 mark-sweep-compact
+   何时使用? Jvm运行在 client 模式，且对全局暂停时间不敏感。
+   如果是 JDK5 且运行在 client 模式，会默认是该垃圾回收机制。
+   可以通过 `-XX:+UseSerialGC` 手动启用。
+
+- Parallel Collector/throughput collector
+    
+    多线程执行，仍然要 stop-the-world, 但是因为是多线程执行，可以大大缩小 全局冻结时间。
+    可以避免在垃圾回收时，只有一个CPU在工作，其他CPU都处于空闲等待状态。
+    何时使用？JVM 运行在多核CPU上，且对全局暂停时间不敏感。
+    因为有可能全局暂停时间仍然会很长，也有可能会造成 old generation collection。
+    注意：该垃圾回收机制仅工作于 Yong generation. 
+    对于 Old generation，仍然使用 Serial Collector。
+    
+    如果是 JDK5 且运行在 server 模式，则默认会使用该模式。
+    可以通过 `-XX:+UseParallelGC` 手动启用。
+    
+    ```text
+    # Serial Collector
+    ---->|            |---->
+    ---->|===========>|---->
+    ---->|            |---->
+  
+    # Parallel Collector
+    ---->|===>|---->
+    ---->|===>|---->
+    ---->|===>|---->
+    ```    
+
+- Parallel Compacting Collector
+ 
+    同 `Parallel Collector` 的区别就是，该模式
+    对于 Young generation, 其算法与 Parallel Collector 一致。
+    对于 Old generation/Permanent generation : stop-the-world, 多线程执行。
+    
+    - marking 阶段：多线程并发执行，将内存分成固定区块，标记其中要清除的对象
+    - summary 阶段：单线程执行，按固定区块检查，找到一个分界点，一边是有很多存活对象的，一边是要清空的。
+    - compaction 阶段：多线程执行，根据总结的信息，并发执行。
+    
+    何时使用？运行在多核CPU上，且对全局冻结时间敏感。
+    但不适用于共享虚拟机——即无法保障能独占CPU一段时间，这种情况，
+    可以使用 `–XX:ParallelGCThreads=n` 来减少 GC 线程数，或选择其他垃圾回收器。
+
+    可以通过 `-XX:+UseParallelOldGC` 手动启用。
+
+- Concurrent Mark-Sweep (CMS) Collector/low-latency collector
+    
+    有时候，端到端的应用会更注重 响应时间，而非吞吐量。Young generation 的垃圾回收通常会造成较长时间的全局暂停。
+    而 old generation 的垃圾回收也有可能会造成长时间全局暂停，特别是使用大 堆内存 时。
+    
+    对于 Young generation, 其算法与 Parallel Collector 一致。
+    
+    对于 Old generation : 大多能够与应用代码平行执行。
+    
+    - initial mark 阶段： stop-the-world, 单线程执行，标记出应用代码可直接接触到的对象。
+    - concurrent mark 阶段：与应用代码并发执行，单线程执行，递归标记出所有存活对象。
+      注意：此时应用在执行，initial mark 阶段的存活对象，有可能不再存活（floating garbage）；
+      也有可能向 old generation 新申请对象入住。  
+    - remark 阶段：stop-the-world, 并发执行。重新标记，防止新加入的存活对象。
+      但不保证标记出所有可回收对象。
+    - concurrent sweep 阶段：与应用代码并发执行，单线程执行，回收掉可回收的代码。
+    
+    但是注意，该回收器是唯一没有 compact 的垃圾回收器，也就是说，内存会越来越碎。越来越没有连续的大块儿内存。
+    该垃圾回收器需要大的 堆内存。因为在 marking 阶段，仍然要保证有空间可被用于申请内存。
+    因此，该垃圾回收器并不会等到 内存满了才去执行。如果真的内存满了，就会回退到使用 stop-the-world
+    mark-sweep-compact 垃圾回收的方式。
+    可以通过 `–XX:CMSInitiatingOccupancyFraction=n` 指定 old generation 占用百分比来触发GC，该值默认是 68.
+    
+    最后：为了应对内存碎片，该垃圾回收器会追踪常用对象尺寸，预估未来需求，必要时分割和合并空余内存块。
+    
+
 ## 内存管理
 是按照内存池进行管理。可能属于heap或non-heap。
+
 
 
 ## 垃圾回收是按照
 * Yong generation
     * Eden
     * survivor x 2
-* Old generation
-    * Tenured : 新生代中经过多轮垃圾回收仍在幸存区的数据会转移至此。
-    * PermGen （Permanent generation）: 存储JVM的元数据，比如类对象，方法对象（注意：是“对象”，区别与method area的code--字节码）
+* Old generation : (Tenured) 新生代中经过多轮垃圾回收仍在幸存区的数据会转移至此。
+* Permanent generation: 存储JVM的元数据，比如类对象，方法对象（注意：是“对象”，区别与method area的code--字节码）
+
+# 内存溢出 - OutOfMemoryError
+
+- Java heap space : 一般是配置错误，通过 `–Xmx` 增加堆内存上限
+- PermGen space ： 通过 `–XX:MaxPermSize=n` 增加内存
+- Requested array size exceeds VM limit 
+
+# JVM 参数
+
+```text
+–XX:+UseSerialGC
+–XX:+UseParallelGC
+–XX:+UseParallelOldGC
+    -XX:MaxGCPauseMillis=n      # 指示垃圾回收器的全局暂停时间应当不超过该 毫秒数。没有默认值。
+    –XX:ParallelGCThreads=n     # 垃圾回收器线程数，默认为 CPU 核心数量
+    -XX:GCTimeRatio=99          # 垃圾回收所花费时长， 计算公式为 1/(1+n)。 默认的99表达为GC时间不超过 1% 的 CPU 时间。
+–XX:+UseConcMarkSweepGC
+    –XX:+CMSIncrementalMode     # 默认： 'Disabled'。 
+    –XX:+CMSIncrementalPacing   # 默认： 'Disabled'。 
+    -XX:CMSIncrementalDutyCycle=n       #
+    -XX:CMSIncrementalDutyCycleMin=n    #
+    -XX:CMSIncrementalSafetyFactor=n    #
+    -XX:CMSExpAvgFactor=n               #  
+    –XX:ParallelGCThreads=n             # 
+–XX:+PrintGCDetails     # 打印每次 GC 的详情
+–XX:+PrintGCTimeStamps  # 打印每次 GC 的的时间戳
+-server
+-Xms512m
+-Xmx1024m
+
+-XX:PermSize=32m            # permanent generation 初始尺寸
+–XX:MaxPermSize=n           # permanent generation 最大尺寸
+–XX:MinHeapFreeRatio=40     # heap 中每个 generation 最小空余内存，如果空余内存小于该百分比，就自动扩大内存。
+–XX:MaxHeapFreeRatio=70     # 如果空余内存多余该比例，则缩小内存。
+–XX:NewSize=n               # young generation 初始大小
+–XX:NewRatio=n              # 用于分割 heap。
+                            # old generation 是 young generation 的多少倍。
+                            # server 模式默认为8，client 模式默认为 2
+–XX:SurvivorRatio=32        # 用于分割 young generation。按照默认值的话，Eden 和两个 Survivor 的比例为
+                            # 32:1:1
+
+
+-XX:ErrorFile=${CATALINA_HOME}/logs/hs_err_pid%p.log
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=${CATALINA_HOME}/logs/start.at.$today.dump.hprof 
+-XX:+PrintGCDateStamps
+-XX:+PrintGCDetails
+
+-Dfile.encoding=UTF-8
+-Djava.net.preferIPv4Stack=true
+
+HAT
+```
